--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,5 +21,8 @@
     "imagekit": "^4.1.4",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
