--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "imagekit": "^4.1.4",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.5.2"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.6.0"
   }
 }
