--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-PORT=3000
+PORT=
 DATABASE_URL=
 JWT_KEY=
+IMAGEKIT_PUBLIC_KEY=
+IMAGEKIT_SECRET_KEY=
+IMAGEKIT_URL_ENDPOINT=
