--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "imagekit": "^4.1.4",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
